# mts_robots_2025

task2/: Dockerfile  demo.py  docker-compose.yml  ros_entrypoint.sh  test.py  test_output.py  text.txt
task2/ros2_ws/src/controller/: package.xml  setup.py
task2/ros2_ws/src/controller/controller/: amcl_init.py  auto_map_saver.py  controller.py  navigation_goal_sender.py  next_point.py  send_vel.py  telemetry_bridge.py
task2/ros2_ws/src/controller/launch/: cartographer.py  run.py  slam_launch.py  slam_toolbox.py  test.py
task2/ros2_ws/src/controller/resource/: nav2_params.yaml  robot_cartographer_config.lua  slam_toolbox_params.yaml  slam_toolbox_params_real.yaml
task2/ros2_ws/src/lidar_odometry/src/: lidar_odometry_node.cpp
task2/ros2_ws2/src/controller_cpp/: CMakeLists.txt  package.xml
task2/ros2_ws2/src/controller_cpp/include/: telemetry_bridge.hpp  utils.hpp
task2/ros2_ws2/src/controller_cpp/src/: map_building.cpp  telemetry_bridge.cpp
task2/solution_cpp/include/: align.hpp  map_building.hpp  nexp_point.hpp  tel_cmd.hpp
task2/solution_cpp/src/: controller  main.cpp
